--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -5518,4 +5518,24 @@
   'dynamic-form-array.sortable-list.label': 'Sortable list',
 
   'metadata-export-search.submit.error.limit-exceeded': 'Only the first {{limit}} items will be exported',
+
+  'help.page.title': 'HCMUTE Digital Library - Ho Chi Minh City University of Technology and Education',
+
+  'help.page.welcome': 'Welcome to <strong>HCMUTE Digital Library</strong> – a rich electronic learning resource repository, where thousands of books, textbooks, scientific articles and online resources are collected to serve learning, teaching and research.',
+
+  'help.page.description': 'Here we help you search, access and effectively exploit document resources. With a friendly and convenient interface, the Digital Library helps you study and research anytime, anywhere.',
+
+  'help.page.contact.title': 'Contact Information',
+
+  'help.page.contact.address.label': 'Address',
+
+  'help.page.contact.address.value': '1 Vo Van Ngan Street, Thu Duc, Ho Chi Minh City',
+
+  'help.page.contact.email.label': 'Email',
+
+  'help.page.contact.email.value': 'thuvienso@hcmute.edu.vn',
+
+  'help.page.contact.phone.label': 'Phone',
+
+  'help.page.contact.phone.value': '(+84 - 028) 38968641 - (+84 -028) 38961333 - (+84 -028) 37221223',
 }
