feat: update statistics nav item on header to distinguise between general and scope specific statistics

--- a/src/assets/i18n/en.json5
+++ b/src/assets/i18n/en.json5
@@ -3097,6 +3097,12 @@
 
   'menu.section.statistics': 'Statistics',
 
+  'menu.section.view_item_statistics': 'View Item Statistics',
+
+  'menu.section.view_collection_statistics': 'View Collection Statistics',
+
+  'menu.section.view_community_statistics': 'View Community Statistics',
+
   'menu.section.help': 'Help',
 
   'menu.section.statistics_task': 'Statistics Task',
